name:                hspl
version:             0.0.1
synopsis:            Predicate logic programming for Haskell.
description:         HSPL (Haskell Predicate Logic) is an embedded domain specific language that
                     brings logic programming to Haskell. HSPL uses resolution-based automated
                     theorem proving to make logical deductions, and will provide functionality
                     similar to that of logic programming languages like Prolog.
homepage:            https://github.com/jbearer/hspl#readme
license:             MIT
license-file:        LICENSE
author:              Jeb Bearer
maintainer:          jbearer@hmc.edu
copyright:           2017 Jeb Bearer
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.3 && < 5
  ghc-options:         -Wall
  exposed-modules:     Control.Hspl

test-suite hspl-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspl
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/jbearer/hspl
