name:                hspl
version:             0.0.1
synopsis:            Predicate logic programming for Haskell.
description:         HSPL (Haskell Predicate Logic) is an embedded domain specific language that
                     brings logic programming to Haskell. HSPL uses resolution-based automated
                     theorem proving to make logical deductions, and will provide functionality
                     similar to that of logic programming languages like Prolog.
homepage:            https://github.com/jbearer/hspl#readme
license:             MIT
license-file:        LICENSE
author:              Jeb Bearer
maintainer:          jbearer@hmc.edu
copyright:           2017 Jeb Bearer
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag ShowTerms
  description:         Require constant terms to have a Show instance. This forces Unifiable to be a
                       subclass of Show, which limits the set of types from which Terms can be
                       created. However, it can be quite useful for debugging to be able to print
                       Terms (and to have the Terms printed recursively when printing higher-level
                       AST types).
  default:             True
  manual:              True

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4 && < 5
                     , containers
                     , mtl
                     , logict
                     , ansi-terminal
                     , monad-coroutine
                     , parsec
                     , haskeline
                     , call-stack
  ghc-options:         -Wall
  if flag(ShowTerms)
    cpp-options:       -DSHOW_TERMS
  exposed-modules:     Control.Hspl
                     , Control.Hspl.List
                     , Control.Hspl.Debug
                     , Control.Hspl.Examples
                     , Control.Hspl.Internal.Ast
                     , Control.Hspl.Internal.Unification
                     , Control.Hspl.Internal.Solver
                     , Control.Hspl.Internal.Debugger
                     , Control.Hspl.Internal.Tuple
                     , Control.Hspl.Internal.UI
                     , Control.Hspl.Internal.VarMap
                     , Control.Hspl.Internal.Logic
                     , Control.Hspl.Internal.Syntax

test-suite hspl-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.5 && < 5
                     , hspl
                     , HUnit
                     , hspec
                     , containers
                     , should-not-typecheck
                     , deepseq
                     , mtl
                     , directory
                     , filepath
                     , time
                     , monad-coroutine
                     , parsec
                     , transformers
                     , haskeline
                     , call-stack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Testing
                     , AstTest
                     , UnificationTest
                     , SolverTest
                     , DebuggerTest
                     , HsplTest
                     , ExamplesTest
                     , TupleTest
                     , UITest
                     , VarMapTest
                     , LogicTest
                     , ListTest
                     , SyntaxTest

source-repository head
  type:     git
  location: https://github.com/jbearer/hspl
