name:                hspl-bench
version:             0.0.1
synopsis:            Benchmarking utilities for the HSPL benchmark suite.
description:         This package provides utilites for timing the execution of HSPL programs and
                     comparing the results with similar programs written in Prolog.
license:             MIT
license-file:        LICENSE
author:              Jeb Bearer
maintainer:          jbearer@hmc.edu
copyright:           2017 Jeb Bearer
category:            Test
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.0 && < 5
                     , hspl
                     , time
                     , mtl
                     , process
                     , directory
                     , filepath
                     , pptable
                     , call-stack
  exposed-modules:     Bench
